crates/analyzer/tests/snapshots/errors__non_bool_or.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: type mismatch
  ┌─ [snippet]:5:12
  │
5 │   x = x or y
  │            ^ this has type `u256`; expected type `bool`


